# hermes-kite

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: README.md  policy.json
data/: agent_registry.json  kite_settled.json  nav_ledger.json  portfolio_summary.json
docs/: QUICKSTART.md
docs/adr/: 0001-cron-no-daemons.md  0002-policy-driven-config.md  0003-engine-vs-funds-split.md
docs/runbooks/: reconcile-failure.md  settlement-nonce-mismatch.md  worker-stale.md
engine/: __init__.py  backtest.py  fund_router.py  grid_base.py  logging_setup.py  nav_accounting.py  policy.py  risk_engine.py  yield_base.py
funds/: __init__.py  aave_usdc_worker.py  backtest.py  crypto_memecoins_worker.py  delta_neutral_worker.py  euler_pyusd_worker.py  fund_router.py  grid_base.py  grid_btc_usdc_worker.py  grid_eth_usdc_worker.py  grid_sol_worker.py  grid_stables_worker.py  morpho_usdc_worker.py  nav_accounting.py  policy.py  polymarket_btc_updown_worker.py  pyth_momentum_worker.py  risk_engine.py  sgho_worker.py  superstate_uscc_worker.py  tv_momentum_worker.py  wow_sniper_base_worker.py  xstocks_directional_worker.py  xstocks_grid_worker.py  yield_base.py
onchain/: kite_executor.py  register_agent.py
scripts/: __init__.py  cron_settle.sh  export_csv.py  reconcile.py  watchdog.py
tests/: test_backtest.py  test_nav_accounting.py  test_reconcile.py  test_risk_engine.py  test_smoke.py  test_watchdog.py
