[project]
name = "hermes-kite"
version = "1.0.0"
description = "Autonomous portfolio manager. grab_and_run() loop with on-chain settlement on Kite testnet."
requires-python = ">=3.11"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "S",
]
ignore = [
    "E501",
    "S101",
    "S603",
    "S607",
    "S110",
    "S311",
    "B904",
    "S324",
    "S104",
    "S310",  # urllib URL-scheme audit; URLs are hardcoded module constants, no user input
    "S112",  # try-except-continue is the intentional skip pattern for bad market data
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
